ViTables ChangeLog
==================
** November 30, 2010 **
Customised models have been debugged and fine tuned using modtest.py.

** November 28, 2010 **
The docstrings of the whole package have been updated.

** November 24, 2010 **
super() is used now in the ctor of all classes derived from PyQt4.

The csv plugin has been debugged and refactored.

** November 20, 2010 **
The module vtapp.py has been split into 2 modules.

** November 17, 2010 **
Qt properties of QActions set via keyword arguments at creation time.

** November 16, 2010 **
Some improvements applied to vtapp.py module.

Some small improvements have been made to several modules.

Several methods renamed to shorter names. Fixed a small bug.

Some minimal changes made to a several modules.

** November 15, 2010 **
Some improvements applied to the docBrowser subpackage.

The logger.py module has been refactored.

** November 14, 2010 **
All old-style signal/lot connections replaced with new-style connections.

** November 05, 2010 **
Several modules refactored. Code for querying tables has been debugged.

** November 04, 2010 **
The Preferences dialog has been debugged and refactored.

Signals and slots are connected via setUi method in several modules.

** November 03, 2010 **
The Preferences dialog has been improved.

** November 02, 2010 **
A couple of pure Python modules have been split in a Python part and a ui part.

** October 30, 2010 **
The utils.py module has been simplified.

Some unwanted directories have been removed from the repository.

Copyright statements updated in every source file.

The method used for dynamically load UI files has been simplified.

** October 26, 2010 **
Information about version number and copyright has been updated.

** December 29, 2009 **
Module nodePropDlg.py has been refactored and simplified.

Some code dealing with PyTables datatypes and numpy datatypes has been cleaned.

** December 28, 2009 **