@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** December 01, 2010 **
+Fixed some small problems in several files.
+
 ** November 30, 2010 **
 Customised models have been debugged and fine tuned using modtest.py.
 
